# rafka_infa

./: .gitignore  README.md
infra/: README.md  setup-infra.sh
infra/k8s/base/: network-policies.yaml
infra/k8s/base/monitoring/: grafana-deployment.yaml  prometheus-config.yaml  prometheus-deployment.yaml  secrets.yaml  service-monitors.yaml  services.yaml
infra/k8s/base/rafka/: deployment.yaml  headless-service.yaml  hpa.yaml  pdb.yaml  service.yaml  skytable-config.yaml
infra/k8s/base/scylla/: backup-config.yaml  configmap.yaml  consistency-check.yaml  network-policies.yaml  rbac.yaml  restore-config.yaml  scylla-backup.yaml  scylla-operator.yaml  scyllacluster.yaml  service.yml  statefulset.yaml
infra/k8s/base/skytable/: config.yaml
infra/k8s/etcd/: service.yaml
infra/k8s/overlays/dev/: test.md
infra/kubernetes/: deployment.yaml  service.yaml
infra/monitoring/alertmanager/: alertmanager.yml
infra/monitoring/grafana/: rafka-dashboard.json
infra/monitoring/prometheus/: prometheus.yml
infra/scripts/: deploy-all.sh  deploy.sh
k8s/: namespace.yaml
k8s/etcd/: statefulset.yaml
k8s/rafka/: configmap.yaml  deployment.yaml  service.yaml
k8s/scylladb/: pvc.yaml  service.yaml  statefulset.yaml
rafka/: Cargo.toml  Dockerfile  build.rs
rafka-test/: Cargo.toml
rafka-test/src/: main.rs
rafka/proto/: engine.proto
rafka/src/: client.rs  main.rs  server.rs
